--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
-    "next": "14.2.10",
+    "next": "14.2.15",
+    "next-intl": "3.22",
     "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
